--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "currency-exchange-widget",
   "version": "0.1.0",
-  "private": true,
+  "homepage" : "http://matthewbpt.github.io/currency-exchange-widget",
   "dependencies": {
     "currency-symbol-map": "^4.0.3",
     "lodash": "^4.17.5",
@@ -13,7 +13,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "striptags": "^3.1.1"
+    "redux-saga": "^0.16.0",
+    "string-strip-html": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
